--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "stunt-doubles-server",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": "8.8.1",
+    "npm": "5.0.3"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
