--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "1.18.2",
     "concurrently": "^3.6.1",
     "cors": "2.8.4",
+    "eslint-config-airbnb": "^17.1.0",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
     "graphql": "^0.13.2",
